# leed_pdf_viewer

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IOS_APP_STORE_SUBMISSION.md  IOS_BUILD_COMPLETE.md  IOS_BUILD_QUICK_START.md  IOS_IMPLEMENTATION_SUMMARY.md  LICENSE-COMMERCIAL  LICENSE-DESKTOP-EULA  LICENSE-DESKTOP-EULA.md  README.md  README.test.md  SECURITY.md  URL_LOADING_FEATURE.md  component.plist  eslint.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  todo.md  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: accessibility.yml  bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance.yml
.github/workflows/: ci.yml  e2e.yml  release.yml
docs/: APPSTORE_SETUP_GUIDE.md  MAC_APP_STORE_SUBMISSION.md  RESPONSIVE_TOOLBAR.md  SEARCH_FEATURE.md
functions/Pdf2Docx/: main.py  requirements.txt
functions/detect-country/: package-lock.json  package.json
functions/detect-country/src/: main.js
scripts/: generate-sitemap.js  get-local-ip.sh  test-runner.js
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  entitlements-developerid.plist  entitlements.plist  tauri.appstore.json  tauri.conf.json  tauri.ios.json
src-tauri/capabilities/: default.json  desktop.json  ios.json  macos.json
src-tauri/icons/: icon.icns
src-tauri/icons/LeedPDF_Icon.icon/: icon.json
src-tauri/src/: lib.rs  license.rs  macos_events.rs
src/lib/: constants.ts  download-links.json  index.ts
src/lib/components/: ArrowAnnotation.svelte  ArrowOverlay.svelte  BrowserExtensionPromotion.svelte  CompressedPDFExport.svelte  CompressionSettingsModal.svelte  CookieConsentBanner.svelte  DebugPanel.svelte  DesktopDownloadCard.svelte  DragOverlay.svelte  DropboxChooser.svelte  DropzonePage.svelte  ExportProgressCard.svelte  Footer.svelte  GestureHint.svelte  GlobalStyles.svelte  HelpButton.svelte  HomeButton.svelte  ImageAnnotation.svelte  ImageOverlay.svelte  KeyboardShortcuts.svelte  LicenseModal.svelte  LinkOverlay.svelte  PDFMergeViewer.svelte  PDFPageCard.svelte  PDFUploadZone.svelte  PDFViewer.svelte  PageThumbnails.svelte  ParityDeals.svelte  PngExport.svelte  PromoCard.svelte  PromoCardStack.svelte  SEOHead.svelte  SharePDFModal.svelte  StampAnnotation.svelte  StampOverlay.svelte  StampPalette.svelte  StickyNote.svelte  StickyNoteOverlay.svelte  TemplatePicker.svelte  TextAnnotation.svelte  (+10 more)
src/lib/config/: fonts.ts
src/lib/data/: promoCards.json  templates.json  tips.json
src/lib/services/: appwrite.ts  pdfSharingService.ts  test-sharing-security.ts
src/lib/stores/: consentStore.ts  drawingStore.ts  parityBannerStore.ts  themeStore.ts  toastStore.ts  updateStore.ts
src/lib/types/: dropbox.d.ts  search.ts
src/lib/utils/: analytics.ts  buildConstants.ts  docxExport.ts  drawingUtils.ts  exportHandlers.ts  fileStorageUtils.ts  geoDetection.ts  gestureUtils.ts  imageImport.ts  keyboardShortcuts.ts  konvaShapeEngine.ts  licenseManager.ts  (+15 more)
src/routes/: +layout.js  +layout.svelte  +layout.ts  +page.svelte
src/types/: pdfjs-dist-extension.d.ts
static/: robots.txt  sitemap.xml
tests/: setup.ts
tests/e2e/: app.spec.ts  stickers.spec.ts  toolbar-responsive.spec.ts
(+49 files in other folders)
