[package]
name = "leed-pdf"
version = "2.19.1"
description = "A Lightweight, Opensource and Private PDF Viewer & Annotation Tool"
authors = ["Rudi K <reach@rudi.engineer>"]
license = "AGPL"
repository = "https://github.com/rudi-q/leed_pdf_viewer"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2.3.0"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
tokio = { version = "1.0", features = ["full"] }
machine-uid = "0.5"
rfd = "0.15"

# Linux-specific: Use gtk3 instead of xdg-portal to avoid conflict
[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.15", features = ["gtk3"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
